// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit form is invalid 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-17ab1cr-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-17ab1cr-StyledInput::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-17ab1cr-StyledInput::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-17ab1cr-StyledInput:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-17ab1cr-StyledInput::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-17ab1cr-StyledInput:hover,
.cache-17ab1cr-StyledInput:focus {
  border-color: #4f0599;
}

.cache-17ab1cr-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-17ab1cr-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-17ab1cr-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-17ab1cr-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-17ab1cr-StyledInput::placeholder {
  opacity: 1;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-e84ooj-StyledError {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

.cache-10tixl2-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #22c8a2;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  box-shadow: none;
}

.cache-10tixl2-StyledButton:hover,
.cache-10tixl2-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-10tixl2-StyledButton:hover,
.cache-10tixl2-StyledButton:focus {
  color: #ffffff;
  background-color: #1eb290;
}

.cache-10tixl2-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <div
        class="cache-1txlkbl-StyledRelativeDiv e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-17ab1cr-StyledInput e18bmnpq0"
          name="toto"
          type="text"
          value="4"
        />
      </div>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-e84ooj-StyledError e18bmnpq1"
        />
      </div>
    </div>
    <button
      aria-disabled="true"
      class="em6gco80 cache-10tixl2-StyledButton"
      disabled=""
      type="submit"
    >
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit form is submitting 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-10tixl2-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #22c8a2;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  box-shadow: none;
}

.cache-10tixl2-StyledButton:hover,
.cache-10tixl2-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-10tixl2-StyledButton:hover,
.cache-10tixl2-StyledButton:focus {
  color: #ffffff;
  background-color: #1eb290;
}

.cache-10tixl2-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="true"
      class="em6gco80 cache-10tixl2-StyledButton"
      disabled=""
      type="submit"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="cache-1mntgth-ActivityIndicator"
          role="progressbar"
          style="height: 1em; width: 1em;"
          viewBox="0 0 100 100"
        >
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="transparent"
            stroke-width="16"
          />
          <circle
            class="cache-wxrv4d-ActivityIndicator"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="currentColor"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly  1`] = `
<DocumentFragment>
  .cache-um0kwk-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #22c8a2;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-um0kwk-StyledButton:hover,
.cache-um0kwk-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-um0kwk-StyledButton:hover,
.cache-um0kwk-StyledButton:focus {
  color: #ffffff;
  background-color: #1eb290;
}

.cache-um0kwk-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<form
    novalidate=""
  >
    <button
      aria-disabled="false"
      class="em6gco80 cache-um0kwk-StyledButton"
      type="submit"
    >
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Test
      </div>
    </button>
  </form>
</DocumentFragment>
`;
